# paper-to-audio

./: README.md  chunked_tts.py  paper2audio_gemini.ipynb  paper2audio_openai.ipynb  pyproject.toml  text_extraction.py
